@@ -1,4 +1,8 @@
-2012-11-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
+2012-12-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* Changelog: Fixed previous entry date.
+	* combat.cc: Fixed incorrect animation of slimes after they attacked.
+
+2012-12-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* schedule.cc: Walk-to-schedule caused instances of the sit-on-air bug because
 	  it would teleport the NPC if off-screen and leave him/her sitting/lying down.
 	* actors.cc: Fixed another case of potential sit-on-air source.
